<resources>
    <string name="app_name">Recovery Tool</string>
    <string name="common">通用</string>
    <string name="command">指令</string>
    <string name="twrp">TWRP</string>
    <string name="about">关于</string>
    <string name="source_code">源代码</string>
    <string name="reboot_recovery">重启到Recovery</string>
    <string name="add">新增</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="show_commands">展示指令</string>
    <string name="cancel">取消</string>
    <string name="name">名称</string>
    <string name="input_cannot_be_empty">输入不能为空</string>
</resources>