<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:transitionName="shared_element_end_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/name"
        app:helperTextEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:hint="@string/command"
        app:helperTextEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/commands"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>
    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_marginStart="18dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/selected_disabled"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/common"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common"/>
            <RadioButton
                android:id="@+id/twrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twrp"/>
        </RadioGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_margin="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_baseline_save_24" />
    </LinearLayout>


</LinearLayout>